update web view my project

--- a/src/Home/static/header.less
+++ b/src/Home/static/header.less
@@ -27,7 +27,7 @@ header {
         display: block;
         width: 120px;
         height: 32px;
-        background: url(https://gw.alipayobjects.com/zos/rmsportal/qdWihUzYxihpnOMVhFPV.png) no-repeat 0 50%;
+        background: url(http://drive.google.com/uc?id=1t1E118kDKASzmvcW132qZgUA27-ICCpe) no-repeat 0 50%;
         background-size: 120px 32px;
         text-indent: -999em;
       }
