update web view my project

--- a/src/Home/static/header.less
+++ b/src/Home/static/header.less
@@ -23,14 +23,14 @@ header {
         height: 12px;
         background: #999;
       }
-      a {
-        display: block;
-        width: 120px;
-        height: 32px;
-        background: url(http://drive.google.com/uc?id=1t1E118kDKASzmvcW132qZgUA27-ICCpe) no-repeat 0 50%;
-        background-size: 120px 32px;
-        text-indent: -999em;
-      }
+      // a {
+      //   display: block;
+      //   width: 120px;
+      //   height: 32px;
+      //   background: url(http://drive.google.com/uc?id=1t1E118kDKASzmvcW132qZgUA27-ICCpe) no-repeat 0 50%;
+      //   background-size: 120px 32px;
+      //   text-indent: -999em;
+      // }
       span{
         position: absolute;
         font-size: 14px;
